--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <head>
 	<title>type.shit</title>
-	<icon src="https://cdn-icons-png.flaticon.com/512/2991/2991148.png">
+	<icon src="/assets/icon.png">
 	<meta name="theme-color" content="#323437">
 	<meta name="description" content="A minimalist typing test - type.shit">
 	
@@ -99,7 +99,8 @@
 	
 	<!-- Restart Button -->
 	<button id="restart-btn" style="restart-btn">
-		Restart Test (Tab)
+	    <img src="/assets/reset.svg" alt="Restart" />Restart
 	</button>
+
 </body>
 </html>
