--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 	<!-- Test Area -->
 	<div style="test-area">
 		<div id="test-words" style="text-display">
-			Press any key to start
+			Press tab to start
 		</div>
 	</div>
 	
