--- a/index.html
+++ b/index.html
@@ -102,5 +102,7 @@
 		<img style="mx-auto block" src="https://github.com/officialmelon/type.shit/blob/master/assets/reset.png?raw=true" style="w-12 h-12"  /> 
 	</div>
 
+
+	<!-- Version 1.0 -->
 </body>
 </html>
