--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 	
 	<style>
 		body { bg-[#323437] text-[#d1d0c5] font-roboto text-base min-h-screen flex flex-col items-center justify-center p-4 }
-		.header { text-[#3b82f6] text-4xl font-bold text-center mb-8 }
-		.config-section { flex flex-row gap-6 mb-8 flex-wrap justify-center }
+		.header { text-[#3b82f6] text-4xl font-bold text-center pb-8 }
+		.config-section { flex flex-row gap-6 flex-wrap justify-center pb-12 }
 		.config-group { flex flex-col gap-2 items-center }
 		.config-label { text-[#646669] text-sm font-bold }
 		.config-options { flex flex-row gap-2 }
 		.config-btn { bg-[#2c2e31] text-[#646669] px-3 py-1 rounded cursor-pointer hover:bg-[#3c4043] hover:text-[#d1d0c5] }
 		.active { bg-[#4f5257] text-[#ffffff] }
-		.test-area { bg-[#2c2e31] rounded-lg p-8 mb-6 mx-auto }
+		.test-area { bg-[#2c2e31] rounded-lg p-8 mx-auto }
 		.text-display { text-xl line-height-relaxed mb-6 min-h-24text-center }
 		.word { display-inline-block margin-right-2 }
 		.char.incorrect { text-[#ca4754] bg-[#7e2a33] }
@@ -32,18 +32,16 @@
 		.results-stat { flex flex-row justify-between items-center }
 		.results-stat-label { text-[#646669] }
 		.results-stat-value { text-[#d1d0c5] font-bold }
-		.hidden { visible-false }
 	</style>
 	<script src="scripts/script.lua"></script>
 </head>
 
 <body>
-	<div style="header">
+	<div id="header" style="header opacity-[0]">
 		type.shit
 	</div>
-	
 	<!-- Configuration Section -->
-	<div style="config-section">
+	<div id="config-section" style="config-section opacity-[0]">
 		<div style="config-group">
 			<div style="config-label">time</div>
 			<div style="config-options">
@@ -73,25 +71,23 @@
 	</div>
 	
 	<!-- Test Area -->
-	<div style="test-area">
-		<div id="test-words" style="text-display">
-			Press any key to start
-		</div>
+	<div id="test-section" style="test-area opacity-[0]">
+		<div id="test-words" style="text-display ">Press any key to start</div>
 	</div>
 	
 	<!-- Stats Section -->
-	<div style="stats">
-		<div style="stat">
+	<div id="stats-section" style="stats">
+		<div id="wpm-counter" style="stat opacity-[0]">
 			<div id="wpm-value" style="stat-value">0</div>
 			<div style="stat-label">wpm</div>
 		</div>
 		
-		<div style="stat">
+		<div id="accuracy-counter" style="stat opacity-[0]">
 			<div id="accuracy-value" style="stat-value">100%</div>
 			<div style="stat-label">accuracy</div>
 		</div>
 		
-		<div style="stat">
+		<div id="time-counter" style="stat opacity-[0]">
 			<div id="time-value" style="stat-value">30</div>
 			<div style="stat-label">time</div>
 		</div>
@@ -101,8 +97,6 @@
 	<div id="restart-btn" style="restart-btn">
 		<img style="mx-auto block" src="https://github.com/officialmelon/type.shit/blob/master/assets/reset.png?raw=true" style="w-12 h-12"  /> 
 	</div>
-
-
 	<!-- Version 1.0 -->
 </body>
 </html>
