fix icon upd script

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
 	<title>type.shit</title>
-	<icon src="/assets/icon.png">
+	<icon src="https://github.com/officialmelon/type.shit/blob/master/assets/brand.png?raw=true">
 	<meta name="theme-color" content="#323437">
 	<meta name="description" content="A minimalist typing test - type.shit">
 	
