--- a/type.shit.2.0/index.html
+++ b/type.shit.2.0/index.html
@@ -19,7 +19,7 @@
         }
 
         .top-left-logo {
-            w-50 h-35
+            w-35
         }
 
         .text-to-type {
@@ -31,10 +31,7 @@
 <body>
     <div style="header-section">
         <div style="top-left-logo">
-            <img src="assets/images/LeftLogo.png" alt="type.shit logo">
-        </div>
-        <div style="top-right-controls">
-            <button style="settings-button">Settings</button>
+            <img style="top-left-logo" src="https://github.com/officialmelon/type.shit/blob/master/type.shit.2.0/assets/images/LeftLogo.png?raw=true" alt="type.shit logo">
         </div>
     </div>
 </body>
