--- a/type.shit.2.0/index.html
+++ b/type.shit.2.0/index.html
@@ -22,6 +22,10 @@
             w-35
         }
 
+        .header-setting-icon {
+            w-35
+        }
+
         .text-to-type {
             text-xl font-bold text-[#ffffff]
         }
@@ -32,6 +36,9 @@
     <div style="header-section">
         <div style="top-left-logo">
             <img style="top-left-logo" src="https://github.com/officialmelon/type.shit/blob/master/type.shit.2.0/assets/images/LeftLogo.png?raw=true" alt="type.shit logo">
+        </div>
+        <div style="header-setting-icon">
+            <img style="header-setting-icon" src="https://github.com/officialmelon/type.shit/blob/master/type.shit.2.0/assets/images/settings.svg?raw=true" alt="Settings">
         </div>
     </div>
 </body>
