--- a/type.shit.2.0/index.html
+++ b/type.shit.2.0/index.html
@@ -11,7 +11,7 @@
         }
 
         .header-section {
-            flex flex-row justify-between
+            flex flex-row w-full justify-between
         }
 
         .word-container {
@@ -23,7 +23,7 @@
         }
 
         .header-setting-icon {
-            w-35
+            w-12
         }
 
         .text-to-type {
@@ -35,10 +35,10 @@
 <body>
     <div style="header-section">
         <div style="top-left-logo">
-            <img style="top-left-logo" src="https://github.com/officialmelon/type.shit/blob/master/type.shit.2.0/assets/images/LeftLogo.png?raw=true" alt="type.shit logo">
+            <img style="top-left-logo" src="https://github.com/officialmelon/type.shit/blob/master/type.shit.2.0/assets/images/LeftLogo.png?raw=true" alt="type.shit">
         </div>
         <div style="header-setting-icon">
-            <img style="header-setting-icon" src="https://github.com/officialmelon/type.shit/blob/master/type.shit.2.0/assets/images/settings.svg?raw=true" alt="Settings">
+            <img style="header-setting-icon" src="https://github.com/officialmelon/type.shit/blob/master/type.shit.2.0/assets/images/settings.png?raw=true" alt="settings">
         </div>
     </div>
 </body>
